About me Section added with styles

--- a/index.html
+++ b/index.html
@@ -30,8 +30,49 @@
         />
       </section>
 
-      <section id="about">
-        <h2>About Me</h2>
+      <section class="about" id="about">
+        <h2>A little About me...</h2>
+        <p>
+          " Ever since I first attended a Tech-fest and saw the ever-growing
+          horizons of innovation, I have been hooked to the field of Engineering
+          and Tech. Now after pursuing my Bachelors in Computer Science, Masters
+          in Information Systems, and working on some innovative products I am
+          on the lookout to keep fueling this passion.
+        </p>
+        <p>
+          My journey into tech began with a deep curiosity about how small
+          pieces of innovation can have a significant impact on people's lives.
+          This curiosity led me to explore various domains within the tech
+          world. I started as a Software Developer at Lazertech Solutions, then
+          delved into Data Engineering & Analysis at Kpranali Investments, and
+          contributed as a Web Developer at Softcell Technologies to help them
+          establish a digital presence.
+        </p>
+        <p>
+          During my Master’s program, I expanded my skill set further by working
+          with Founderway as a Developer and later as a Tech Lead. I also gained
+          valuable experience as a Technical Intern and currently as a Software
+          Developer at Bummock AI. These roles have broadened my expertise and
+          deepened my understanding of the tech landscape.
+        </p>
+        <p>
+          All of these experiences made me realize that I have a passion for
+          tech that helps me learn a lot in all domains I pursue. I tend to gain
+          expertise in the domain I work in and am great with juggling between
+          tasks and managing my time to do justice to the work I do. It is my
+          diverse interests and team spirit that help me make the most out of
+          every opportunity.
+        </p>
+        <p>
+          Outside of work, I am an avid reader and have a great appreciation for
+          creativity and art forms. I take pleasure from simple things like
+          walking, listening to music, and most of all cooking.
+        </p>
+        <p>
+          I am really excited about tech and innovation and eager to connect
+          with like-minded professionals to learn from them and make a positive
+          impact together. "
+        </p>
       </section>
       <section id="experience">
         <h2>Professional Experience</h2>
