Added the professional experience section with styles

--- a/index.html
+++ b/index.html
@@ -76,6 +76,41 @@
       </section>
       <section id="experience">
         <h2>Professional Experience</h2>
+
+        <div class="company">
+          <img
+            src="images/founderway.png"
+            alt="Founderway Logo"
+            class="company-img left"
+          />
+          <div class="company-details right">
+            <h3>Founderway</h3>
+            <p>
+              As a Front-End Developer worked to enhance the website as well as
+              optimize components for re-usability. I played a key role in
+              contributing for the new release that was launched at Techstars
+              Startup weekend.
+            </p>
+          </div>
+        </div>
+
+        <div class="company">
+          <img
+            src="images/bummock.jpeg"
+            alt="Bummock AI Logo"
+            class="company-img right"
+          />
+          <div class="company-details left">
+            <h3>Bummock AI</h3>
+            <p>
+              As a Technical Intern I worked on various aspects of the product
+              which include Backend Engineering, Front-End Engineering and
+              creating a text classification model using ML. Played a key role
+              in developing features like Chat with Document, Timer, Flags and
+              Reports.
+            </p>
+          </div>
+        </div>
       </section>
       <section id="projects">
         <h2>Projects</h2>
