Added projects as image gallery with styles

--- a/index.html
+++ b/index.html
@@ -112,8 +112,51 @@
           </div>
         </div>
       </section>
-      <section id="projects">
-        <h2>Projects</h2>
+      <section class="projects" id="projects">
+        <h2>My Projects</h2>
+        <div class="gallery">
+          <div class="project-card">
+            <img src="images/customerRetention.png" alt="Project 1" />
+            <div class="overlay">
+              <h3>Customer Retention Rate Prediction</h3>
+              <p>
+                Used Customer Data to predict the retention rate and provide
+                data backed solutions to increase retention rate.
+              </p>
+            </div>
+          </div>
+          <div class="project-card">
+            <img src="images/webDesign.png" alt="Project 2" />
+            <div class="overlay">
+              <h3>Adoption App</h3>
+              <p>
+                Designed a mobile app for an Adoption Agency keeping all user
+                pain points and needs in mind using figma.
+              </p>
+            </div>
+          </div>
+          <div class="project-card">
+            <img src="images/ecommerce.jpg" alt="Project 3" />
+            <div class="overlay">
+              <h3>E-Commerce Website</h3>
+              <p>
+                Created a MERN Stack website for E-shoppers keeping all the pain
+                point of current apps in mind.
+              </p>
+            </div>
+          </div>
+          <div class="project-card">
+            <img src="images/revenueGeneration.jpg" alt="Project 3" />
+            <div class="overlay">
+              <h3>Revenue Generation Prediction</h3>
+              <p>
+                Using ML and Company data to prdict the amount of revenue
+                generated and identifying the top 5 most valuable resources that
+                contribute to revenue.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
