--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Professional Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <nav class="navbar">
@@ -158,8 +162,34 @@
           </div>
         </div>
       </section>
-      <section id="contact">
-        <h2>Contact</h2>
+      <section class="contact" id="contact">
+        <h2>Let's Connect!</h2>
+        <div class="contact-container">
+          <a
+            href="https://www.linkedin.com/in/rajvi-chokshi/"
+            target="_blank"
+            class="contact-item"
+          >
+            <i class="fab fa-linkedin"></i>
+            <span>LinkedIn</span>
+          </a>
+          <a href="mailto:chokshi.ra@northeastern.edu" class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <span>Email</span>
+          </a>
+          <a
+            href="https://github.com/Rajvi-C"
+            target="_blank"
+            class="contact-item"
+          >
+            <i class="fab fa-github"></i>
+            <span>GitHub</span>
+          </a>
+          <a href="tel:+18573130406" class="contact-item">
+            <i class="fas fa-phone"></i>
+            <span>Mobile</span>
+          </a>
+        </div>
       </section>
     </div>
   </body>
